# reason-mui-binding-generator

./: .babelrc  .gitignore  README.md  bsconfig.json  package.json  reason-mui-binding-generator.opam  rebuild.sh  tsconfig.json
extract/: babel.config.js  extract-theme.sh  package.json
extract/src/: env.js  extract.js
ppx-generator/: bsconfig.json  package.json  ppx_withStyles.sh
ppx-generator/example/: ExampleImplementation.re  test.sh  tree.sh
ppx-generator/src/: Generate.re  Mapper.re  Replace.re  ppx_withStyles.re
scripts/: env.example.js  extract.js  extract.sh  find-components.js
src/: Component.re  Component.rei  MaterialUiParser.re  MaterialUiWriter.re  ReactToolboxParser.re  constant-strings.ts  custom-props.ts  generator.re  index-theme.ts  index.ts  render-colors.ts  render-icons.ts  render-theme.ts
src/@types/: component.d.ts  prop-types.d.ts
src/classes/: component.ts  interface-converter.ts  property.ts
src/classes/property-parser/: _arrayOf.ts  (+7 more)
src/fixed-modules/: MaterialUi_Icons.re  MaterialUi_Theme.re  MaterialUi_ThemeProvider.re  MaterialUi_WithStyles.re
src/helpers/: clean-js-output.ts  generate-class-prop.ts  generate-reason-name.ts  get-components.ts
src_ts/: component.class.ts  constant-strings.ts  custom-props.ts  index.ts  property.class.ts  render-colors.ts
src_ts/@types/: component.d.ts  prop-types.d.ts
src_ts/helpers/: console.ts  generate-reason-name.ts  get-components.ts  identify-prop-type.ts
src_ts/prop-types/: array-of.ts  base.ts  callback.ts  custom.ts  enum.ts  get-class.ts  primitive.ts  shape.ts  union.ts
(+4 files in other folders)
