opam-version: "1.2"
version: "0.0.1"
maintainer: "Jonathan Siebern <jsiebern88@gmail.com>"
authors: [ "Jonathan Siebern" ]
homepage: "https://github.com/jsiebern/reason-mui-binding-generator"
bug-reports: "https://github.com/jsiebern/reason-mui-binding-generator/issues"
dev-repo: "https://github.com/jsiebern/reason-mui-binding-generator.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "yojson"
]
available: ocaml-version >= "4.02.3"
